--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,108 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  margin: 0 !important;
+  height: 100vh !important;  max-height: -webkit-fill-available;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  font-family: 'Montserrat';
+  /* text-align: center; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body > #root > div {
+  height: 100% !important;
+  background-color: #212A31;
+  width:100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__home{
+  display: flex;
+  flex-direction: column;
+  height: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.dock{
+  margin-top:auto;
+  height: 48px;
+  color:white;
+  padding: 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 16px;
+  /* position: relative;
+  top: -64px; */
 }
 
-.card {
-  padding: 2em;
+.msg-bubble {
+  margin-top: 16px;
+  min-width: 120px;
+  max-width: 450px;
+  padding: 15px;
+  border-radius: 16px;
+  background: #ececec;
+  color:#212A31
 }
 
-.read-the-docs {
-  color: #888;
+.msg-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.msg-info-name {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.msg-info-time {
+  font-size: 0.85em;
+}
+
+.left-msg {
+  background-color: #2E3944;
+  margin-left: 16px;
+  color: white;
+  align-self: flex-start;
+  margin-right: 16px;
+  border-bottom-left-radius: 0;
+}
+
+.right-msg {
+  margin-right: 16px;
+  border-bottom-right-radius: 0;
+  background-color: #124E66;
+  align-self: end;
+  margin-left: 16px;
+  color: white;
+  margin-right: 16px;
+}
+
+#msg-input{
+  width: 95%;
+  height: inherit;
+  background-color:  #2E3944;
+  padding-left: 16px;
+  /* padding-right: 16px; */
+  border: 0;
+  border-radius: 16px;
+  margin-right: 18px;
+  font-size: 1em;
+}
+
+#send-msg-btn{
+  width: 5%;
+  height: inherit;
+  margin-left: auto;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: #2aa7d8;
+  border-radius: 100%;
+}
+
+.send-icon{
+  color:#212A31
 }
