--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,13 @@ body > #root > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .msg-info-name {
-  margin-right: 10px;
-  font-weight: bold;
+  margin-right: 16px;
+  margin-left: 8px;
+  font-weight: normal;
 }
 
 .msg-info-time {
